Add the ingredients and steps to scampi recipe
Wrapped the ingredients with an unordered list and
wrapped the steps with an ordered list

--- a/recipes/scampi.html
+++ b/recipes/scampi.html
@@ -13,5 +13,27 @@
         <p>Shrimp Scampi is a classic dish that I personally love to make.</p>
         
         <p>I found this recipe through NYT cooking and have loved it ever since.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Shrimp</li>
+            <li>Butter</li>
+            <li>White Wine</li>
+            <li>Lemon Juice</li>
+            <li>Angel Hair Pasta</li>
+            <li>Ground Black Pepper</li>
+            <li>Red Pepper Flakes</li>
+            <li>Garlic</li>
+            <li>Parsley</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook pasta to 2-3 minutes under package recommendation, set aside</li>
+            <li>Brown butter in a skillet then add shrimp to cook</li>
+            <li>Crush garlic and add to skillet</li>
+            <li>Add white wine and lower heat to reduce</li>
+            <li>When shrimp is cooked through, add pasta and seasonings, serve!</li>
+        </ol>
     </body>
 </html>
