Add Pizza recipe and navigation between it and index
The pizza recipe is finished and includes the appropriate header,
image, ingredients, and steps along with navigation links in each
html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/scampi.html">Shrimp Scampi</a>
+        <ul>
+            <li><a href="./recipes/scampi.html">Shrimp Scampi</a></li>
+            <li><a href="./recipes/pizza.html">Pizza</a></li>
+        </ul>
+        
     </body>
 </html>
