Add buttered noodles recipe with supporting files and links
The buttered noodles recipe html file was added along with the image
under the images folder and an appropriate link from index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/scampi.html">Shrimp Scampi</a></li>
             <li><a href="./recipes/pizza.html">Pizza</a></li>
+            <li><a href="./recipes/butternoodle.html">Buttered Noodles</a></li>
         </ul>
         
     </body>
